test_suite/alan-2022-examples/failing/006040_mutation.alan
source c begin leave 3 = if 4 then relax end 74 end
